--- a/roles/reproducer/tasks/ci_job.yml
+++ b/roles/reproducer/tasks/ci_job.yml
@@ -23,18 +23,18 @@
       block:
         - name: Ensure directory exists
           ansible.builtin.file:
-            path: "/home/zuul/{{ job_id }}-params"
+            path: "{{ cifmw_reproducer_controller0_user_dir }}{{ job_id }}-params"
             mode: "0755"
             state: directory
-            owner: "{{ cifmw_reproducer_user }}"
-            group: "{{ cifmw_reproducer_user }}"
+            owner: "{{ cifmw_reproducer_controller0_user }}"
+            group: "{{ cifmw_reproducer_controller0_user }}"
 
         - name: Copy environment files to controller node
           tags:
             - bootstrap
           ansible.builtin.copy:
             src: "{{ _reproducer_basedir }}/parameters/"
-            dest: "/home/zuul/{{ job_id }}-params"
+            dest: "{{ cifmw_reproducer_controller0_user_dir }}/{{ job_id }}-params"
             mode: "0644"
 
         - name: Inject reproducer dedicated parameter file
@@ -42,7 +42,7 @@
             - bootstrap
           ansible.builtin.template:
             src: "reproducer_params.yml.j2"
-            dest: "/home/zuul/{{ job_id }}-params/reproducer_params.yml"
+            dest: "{{ cifmw_reproducer_controller0_user_dir }}/{{ job_id }}-params/reproducer_params.yml"
             mode: "0644"
 
         - name: Generate CI job playbook
@@ -70,7 +70,7 @@
           tags:
             - bootstrap
           ansible.builtin.copy:
-            dest: /home/zuul/zuul-network-data.yml
+            dest: "{{ cifmw_reproducer_controller0_user_dir }}/zuul-network-data.yml"
             content: "{{ {'job_network': ci_job_networking} | to_nice_yaml}}"
             mode: "0644"
 
@@ -96,7 +96,7 @@
                 items2dict
               }}
           ansible.builtin.copy:
-            dest: "/home/zuul/ci-framework-data/artifacts/parameters/zuul-params.yml"
+            dest: "{{ cifmw_reproducer_controller0_user_dir }}/ci-framework-data/artifacts/parameters/zuul-params.yml"
             content: "{{ {'zuul': zuul_params_filtered} | to_nice_yaml }}"
             mode: "0644"
 
@@ -105,14 +105,14 @@
         - always
       ansible.builtin.include_tasks: rotate_log.yml
       loop:
-        - "/home/zuul/ansible.log"
-        - "/home/zuul/ansible-pre-ci.log"
-        - "/home/zuul/ansible-{{ job_id }}.log"
-        - "/home/zuul/ansible-content-provider-bootstrap.log"
+        - "{{ cifmw_reproducer_controller0_user_dir }}/ansible.log"
+        - "{{ cifmw_reproducer_controller0_user_dir }}/ansible-pre-ci.log"
+        - "{{ cifmw_reproducer_controller0_user_dir }}/ansible-{{ job_id }}.log"
+        - "{{ cifmw_reproducer_controller0_user_dir }}/ansible-content-provider-bootstrap.log"
 
     - name: Generate and run scripts
       vars:
-        _home: "/home/zuul"
+        _home: "{{ cifmw_reproducer_controller0_user_dir }}"
         run_directory: "{{ _cifmw_reproducer_framework_location }}"
       block:
         - name: Generate pre-ci-play script
