--- a/roles/reproducer/tasks/configure_architecture.yml
+++ b/roles/reproducer/tasks/configure_architecture.yml
@@ -6,18 +6,18 @@
       vars:
         run_directory: "{{ _cifmw_reproducer_framework_location }}"
         exports:
-          ANSIBLE_LOG_PATH: "{{ ansible_user_dir }}/ci-framework-data/logs/ansible-deploy-architecture.log"
+          ANSIBLE_LOG_PATH: "{{ cifmw_reproducer_controller0_user_dir }}/ci-framework-data/logs/ansible-deploy-architecture.log"
         default_extravars:
           - "@~/ci-framework-data/parameters/reproducer-variables.yml"
           - "@~/ci-framework-data/parameters/openshift-environment.yml"
         extravars: "{{ cifmw_reproducer_play_extravars }}"
         playbook: "deploy-edpm.yml"
       ansible.builtin.template:
-        dest: "/home/zuul/deploy-architecture.sh"
+        dest: "{{ cifmw_reproducer_controller0_user_dir }}/deploy-architecture.sh"
         src: "script.sh.j2"
         mode: "0755"
-        owner: "zuul"
-        group: "zuul"
+        owner: "{{ cifmw_reproducer_controller0_user }}"
+        group: "{{ cifmw_reproducer_controller0_user }}"
 
     - name: Rotate some logs
       tags:
