--- a/roles/reproducer/tasks/configure_cleanup.yaml
+++ b/roles/reproducer/tasks/configure_cleanup.yaml
@@ -42,11 +42,11 @@
         extravars: "{{ cifmw_reproducer_play_extravars }}"
         playbook: "clean_openstack_deployment.yaml"
       ansible.builtin.template:
-        dest: "/home/zuul/cleanup-architecture.sh"
+        dest: "{{ cifmw_reproducer_controller0_user_dir }}/cleanup-architecture.sh"
         src: "script.sh.j2"
         mode: "0755"
-        owner: "zuul"
-        group: "zuul"
+        owner: "{{ cifmw_reproducer_controller0_user }}"
+        group: "{{ cifmw_reproducer_controller0_user }}"
 
     - name: Rotate some logs
       tags:
