--- a/roles/reproducer/tasks/libvirt_layout.yml
+++ b/roles/reproducer/tasks/libvirt_layout.yml
@@ -46,7 +46,7 @@
       ansible.builtin.command:  # noqa: command-instead-of-module
         cmd: >-
           rsync -r {{ cifmw_reproducer_basedir }}/reproducer-inventory/
-          zuul@controller-0:reproducer-inventory
+          {{ cifmw_reproducer_controller0_user }}@controller-0:reproducer-inventory
 
 - name: Run post tasks in OCP cluster case
   when:
