--- a/roles/reproducer/tasks/push_code.yml
+++ b/roles/reproducer/tasks/push_code.yml
@@ -78,7 +78,7 @@
 
 - name: Push random code into the proper location
   vars:
-    repo_base_dir: '/home/zuul/src'
+    repo_base_dir: '{{ cifmw_reproducer_controller0_user_dir }}/src'
     _cifmw_reproducer_all_repositories: "{{ cifmw_reproducer_repositories | default([]) }}"
   block:
     - name: Expand cifmw_reproducer_repositories to pull code from ansible controller to controller-0
@@ -95,7 +95,7 @@
         _user_sources: "{{ cifmw_reproducer_repositories | default([]) | map(attribute='src') }}"
         _repo_entry:
           src: "{{ ansible_user_dir }}/{{ repo.value.src_dir | regex_replace('/$', '') }}/"
-          dest: "/home/zuul/{{ repo.value.src_dir }}"
+          dest: "{{ cifmw_reproducer_controller0_user_dir }}/{{ repo.value.src_dir }}"
       ansible.builtin.set_fact:
         _cifmw_reproducer_all_repositories: "{{ _cifmw_reproducer_all_repositories  + [_repo_entry] }}"
       loop: "{{ _zuul['projects'] | dict2items }}"
@@ -126,7 +126,7 @@
         - item.src is abs or item.src is not match('.*:.*')
       ansible.posix.synchronize:
         src: "{{ item.src }}"
-        dest: "zuul@controller-0:{{ item.dest }}"
+        dest: "{{ cifmw_reproducer_controller0_user }}@controller-0:{{ item.dest }}"
         archive: true
         recursive: true
         delete: true
