--- a/roles/reproducer/tasks/configure_post_deployment.yml
+++ b/roles/reproducer/tasks/configure_post_deployment.yml
@@ -6,18 +6,18 @@
       vars:
         run_directory: "{{ _cifmw_reproducer_framework_location }}"
         exports:
-          ANSIBLE_LOG_PATH: "{{ ansible_user_dir }}/ansible-post-deployment.log"
+          ANSIBLE_LOG_PATH: "{{ cifmw_reproducer_controller0_user_dir }}/ansible-post-deployment.log"
         default_extravars:
-          - "@{{ ansible_user_dir }}/ci-framework-data/parameters/reproducer-variables.yml"
-          - "@{{ ansible_user_dir }}/ci-framework-data/parameters/openshift-environment.yml"
+          - "@{{ cifmw_reproducer_controller0_user_dir }}/ci-framework-data/parameters/reproducer-variables.yml"
+          - "@{{ cifmw_reproducer_controller0_user_dir }}/ci-framework-data/parameters/openshift-environment.yml"
         extravars: "{{ cifmw_reproducer_play_extravars }}"
         playbook: "post-deployment.yml"
       ansible.builtin.template:
-        dest: "/home/zuul/post_deployment.sh"
+        dest: "{{ cifmw_reproducer_controller0_user_dir }}/post_deployment.sh"
         src: "script.sh.j2"
         mode: "0755"
-        owner: "zuul"
-        group: "zuul"
+        owner: "{{ cifmw_reproducer_controller0_user }}"
+        group: "{{ cifmw_reproducer_controller0_user }}"
 
     - name: Rotate some logs
       tags:
