--- a/roles/reproducer/vars/main.yml
+++ b/roles/reproducer/vars/main.yml
@@ -2,11 +2,11 @@
 # Default repositories we always want to have
 cifmw_reproducer_default_repositories:
   - src: "https://github.com/openstack-k8s-operators/ci-framework"
-    dest: "/home/zuul/src/github.com/openstack-k8s-operators/ci-framework"
+    dest: "{{ cifmw_reproducer_controller0_user_dir }}/src/github.com/openstack-k8s-operators/ci-framework"
   - src: "https://github.com/openstack-k8s-operators/install_yamls"
-    dest: "/home/zuul/src/github.com/openstack-k8s-operators/install_yamls"
+    dest: "{{ cifmw_reproducer_controller0_user_dir }}/src/github.com/openstack-k8s-operators/install_yamls"
   - src: "https://github.com/openstack-k8s-operators/architecture"
-    dest: "/home/zuul/src/github.com/openstack-k8s-operators/architecture"
+    dest: "{{ cifmw_reproducer_controller0_user_dir }}/src/github.com/openstack-k8s-operators/architecture"
 
 # one place to rule them all
 cifmw_reproducer_nm_dnsmasq: "/etc/NetworkManager/conf.d/zz-dnsmasq.conf"
