--- a/roles/reproducer/tasks/configure_controller.yml
+++ b/roles/reproducer/tasks/configure_controller.yml
@@ -367,11 +367,10 @@
         - cifmw_reproducer_src_dir_stat.stat.exists
         - cifmw_reproducer_src_dir_stat.stat.isdir
 
-    - name: Check if local common-requirements.txt exists
-      delegate_to: localhost
+    - name: Check if common-requirements.txt exists on controller-0
       ansible.builtin.stat:
-        path: "{{ cifmw_reproducer_src_dir }}/github.com/openstack-k8s-operators/ci-framework/common-requirements.txt"
-      register: _local_common_requirements_check
+        path: "{{ cifmw_reproducer_controller0_user_dir }}/src/github.com/openstack-k8s-operators/ci-framework/common-requirements.txt"
+      register: _controller_common_requirements_check
       run_once: true
       ignore_errors: true
 
@@ -382,8 +381,8 @@
       ansible.builtin.pip:
         requirements: "{{ have_local | ternary(local, remote) }}"
       vars:
-        have_local: "{{ _local_common_requirements_check.stat is defined and _local_common_requirements_check.stat.exists }}"
-        local: "{{ cifmw_reproducer_src_dir }}/github.com/openstack-k8s-operators/ci-framework/common-requirements.txt"
+        have_local: "{{ _controller_common_requirements_check.stat is defined and _controller_common_requirements_check.stat.exists }}"
+        local: "{{ cifmw_reproducer_controller0_user_dir }}/src/github.com/openstack-k8s-operators/ci-framework/common-requirements.txt"
         remote: https://raw.githubusercontent.com/openstack-k8s-operators/ci-framework/main/common-requirements.txt
 
     - name: Inject most of the cifmw_ parameters passed to the reproducer run
