--- a/roles/reproducer/defaults/main.yml
+++ b/roles/reproducer/defaults/main.yml
@@ -15,8 +15,8 @@
 # under the License.
 
 
-# All variables intended for modification should be placed in this file.
-# All variables within this role should have a prefix of "cifmw_reproducer"
+# All variables intended for modification should be placed in this file
+# All variables within this role should have a prefix of "cifmw_reproducer".
 cifmw_reproducer_controller_user: "{{ hostvars['controller-0']['ansible_ssh_user'] | default('zuul') }}"
 cifmw_reproducer_controller_user_dir: "/home/{{ cifmw_reproducer_controller_user }}"
 cifmw_reproducer_controller_basedir: "{{ cifmw_reproducer_controller_user_dir }}/ci-framework-data"
