Remove tasks from Github workflows responsible for commenting
The commenting does not work in ci-framework project from unknown
reason.
Until we will not figure out why it does not work, we should
remove the problematic tasks, that might be confusing for
community members.

Signed-off-by: Daniel Pawlik <dpawlik@redhat.com>

--- a/.github/workflows/commit-message-validator.yml
+++ b/.github/workflows/commit-message-validator.yml
@@ -29,16 +29,4 @@ jobs:
       - name: Run commit message check
         id: bodylength
         run: |
-          set +e
-          ./scripts/git-check-commit-body-length.sh commit-message-file > result.log 2>&1
-          EXIT_CODE=$?
-          echo "exit_code=$EXIT_CODE" >> $GITHUB_OUTPUT
-          cat result.log
-
-      - name: Comment on PR if body length check failed
-        if: steps.bodylength.outputs.exit_code != '0'
-        uses: peter-evans/create-or-update-comment@v5
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          body-path: ./result.log
-          reactions: confused
+          ./scripts/git-check-commit-body-length.sh commit-message-file
