--- a/.github/workflows/verify-pr-prefix.yml
+++ b/.github/workflows/verify-pr-prefix.yml
@@ -23,16 +23,4 @@ jobs:
       - name: Run commit message check
         id: prefixcheck
         run: |
-          set +e
-          ./scripts/check-role-prefix.sh > result.log 2>&1
-          EXIT_CODE=$?
-          echo "exit_code=$EXIT_CODE" >> $GITHUB_OUTPUT
-          cat result.log
-
-      - name: Comment on PR if prefix check failed
-        if: steps.prefixcheck.outputs.exit_code != '0'
-        uses: peter-evans/create-or-update-comment@v5
-        with:
-          issue-number: ${{ github.event.pull_request.number }}
-          body-path: ./result.log
-          reactions: confused
+          ./scripts/check-role-prefix.sh
