Take commit msg from SHA-1 to verify pr prefix; don't count Signed-Off-By
Commit fixes issues:
- git body count characters "fits" for requirements when "Signed-Off-By"
  was set
- take commit message from commit SHA-1 instead of compute it in the
  script in Github workflows

Signed-off-by: Daniel Pawlik <dpawlik@redhat.com>

--- a/.github/workflows/verify-pr-prefix.yml
+++ b/.github/workflows/verify-pr-prefix.yml
@@ -20,7 +20,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Dump commit message to file
+        run: |
+          git fetch origin ${{ github.event.pull_request.head.sha }}
+          git log -1 --pretty=format:"%B" ${{ github.event.pull_request.head.sha }} | head -n1 > commit-message-file
+
       - name: Run commit message check
         id: prefixcheck
         run: |
-          ./scripts/check-role-prefix.sh
+          ./scripts/check-role-prefix.sh commit-message-file
